--- a/www/css/mindspur.css
+++ b/www/css/mindspur.css
@@ -61,16 +61,15 @@ navbar {
     navbar a:hover {
       color: #e74c3c; }
 
-.content {
+.content-wrap {
   margin-top: 6rem; }
+  .content-wrap .padded-content {
+    padding: 3rem 0; }
 
-.auth-pane {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
+.modal-wrap {
+  position: relative;
+  top: -2rem;
   left: 0;
-  background: rgba(255, 255, 255, 0.95);
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -103,10 +102,10 @@ navbar {
   -moz-flex-direction: column;
   flex-direction: column;
   -ms-flex-direction: column; }
-  .auth-pane .close-button-wrap {
+  .modal-wrap .close-button-wrap {
     position: relative;
     color: #000; }
-    .auth-pane .close-button-wrap .close-button {
+    .modal-wrap .close-button-wrap .close-button {
       position: absolute;
       color: #fff;
       font-size: 4rem;
@@ -116,29 +115,32 @@ navbar {
       height: 5rem;
       border-radius: 5rem;
       text-decoration: none; }
-  .auth-pane .pane {
+  .modal-wrap .modal {
     padding: 3rem 8rem;
     border-radius: 3px;
     background: #34495e;
     box-shadow: 0px 1px 13px 2px rgba(0, 0, 0, 0.3); }
-    .auth-pane .pane .title {
+    .modal-wrap .modal .title {
       color: #fff;
       font-size: 3rem;
       text-align: center;
       font-weight: 300;
       letter-spacing: 1px;
       margin-bottom: 1rem; }
-    .auth-pane .pane .label {
+    .modal-wrap .modal .label {
       color: #fff;
       letter-spacing: 1px;
       font-weight: 300; }
-    .auth-pane .pane input,
-    .auth-pane .pane button,
-    .auth-pane .pane a {
+    .modal-wrap .modal input,
+    .modal-wrap .modal button,
+    .modal-wrap .modal a {
       display: block;
       width: 100%; }
-    .auth-pane .pane a {
+    .modal-wrap .modal a {
       color: #3498db;
       text-decoration: none; }
-      .auth-pane .pane a:hover {
+      .modal-wrap .modal a:hover {
         text-decoration: underline; }
+
+input[disabled] {
+  color: #999; }
